public interface IDuck{
    public void quack();
    public void swim();
}
