public interface IElectronic{
    public void turnOn();
    public void turnOff();
}
